# bitnet_nvfp4

./: .gitignore  CMakeLists.txt  README.md  summary.md  tasks.md
data/: README.md
scripts/: get_data.sh
src/: cuda_kernels.cu  cuda_kernels.h  dataset.cpp  dataset.h  efla_lm_kernels.cu  efla_lm_kernels.h  rng.cpp  rng.h  train_efla_lm.cpp
